[package]
name = "rewards_dispatcher"
version = "0.6.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[package.metadata.cargo-each]
combinations = [
    { tags = ["build", "@agnostic"], include-rest = false },
    { tags = ["ci", "@agnostic"], include-rest = true }
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
platform = { workspace = true }
sdk = { workspace = true, features = ["contract"] }
versioning = { workspace = true }

# Required as a dependency by `entry_point` attribute macro
cosmwasm-std = { workspace = true }

serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }