lints = { workspace = true }

[package]
name = "timealarms"
version = "0.4.10"
edition.workspace = true
authors.workspace = true
license.workspace = true

[package.metadata.cargo-each]
combinations = [
    { tags = ["build", "@agnostic"], always-on = ["contract"], include-rest = false },
    { tags = ["ci", "@agnostic"], feature-groups = ["contract-and-stub"], include-rest = true },
]
feature-groups = { contract-and-stub = { members = ["contract", "stub"], at-least-one = false, mutually-exclusive = true } }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
contract = ["dep:time-oracle", "dep:versioning", "dep:cosmwasm-std", "stub"]
stub = []
testing = []

[dependencies]
platform = { workspace = true }
sdk = { workspace = true, features = ["contract"] }
time-oracle = { workspace = true, optional = true }
versioning = { workspace = true, optional = true }

# Required as a dependency by `entry_point` attribute macro
cosmwasm-std = { workspace = true, optional = true }

thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
platform = { workspace = true, features = ["testing"] }
schema = { workspace = true }
sdk = { workspace = true, features = ["testing"] }
