lints = { workspace = true }

[package]
name = "lease"
version = "0.12.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[package.metadata.cargo-each]
combinations = [
    { tags = ["build", "$dex"], always-on = ["contract", "$dex"], include-rest = false, generics = { "$dex" = ["dex-astroport_main", "dex-astroport_test", "dex-osmosis"] } },
    { tags = ["ci", "@agnostic"], feature-groups = ["skel"], include-rest = false },
    { tags = ["ci", "@agnostic"], always-on = ["dex-test_impl"], feature-groups = ["contract"], include-rest = false },
]
feature-groups = { contract = { members = ["contract", "contract_testing", "internal.test.contract"], at-least-one = true, mutually-exclusive = true }, skel = { members = ["skel", "skel_testing", "internal.test.skel"], at-least-one = false, mutually-exclusive = true } }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
dex-astroport_main = ["swap/dex-astroport_main"]
dex-astroport_test = ["swap/dex-astroport_test"]
dex-osmosis = ["swap/dex-osmosis"]
dex-test_impl = ["swap/dex-test_impl"]

contract = [
    "skel",
    "dep:access-control",
    "dep:cosmwasm-std",
    "dep:enum_dispatch",
    "dep:lpp",
    "dep:oracle",
    "dep:oracle-platform",
    "dep:platform",
    "dep:profit",
    "dep:reserve",
    "dep:thiserror",
    "dep:timealarms",
    "dep:versioning",
]
contract_testing = [
    "contract",
    "skel_testing",
    "lpp/testing",
    "platform/testing",
    "profit/stub_testing",
]
"internal.test.contract" = [
    "contract_testing",
    "currencies/testing",
    "oracle-platform/testing",
    "reserve/testing",
    "timealarms/testing",
]
skel = [
    "dep:thiserror",
]
skel_testing = [
    "skel",
    "dex/testing",
    "finance/testing",
]
"internal.test.skel" = [
    "skel_testing",
    "dep:platform",
    "platform/testing",
    "dep:versioning",
]

[dependencies]
profit = { workspace = true, optional = true, features = ["stub"] }
reserve = { workspace = true, optional = true, features = ["stub"] }
timealarms = { workspace = true, optional = true, features = ["stub"] }

access-control = { workspace = true, optional = true }
currencies = { workspace = true }
currency = { workspace = true }
dex = { workspace = true, features = ["impl"] }
finance = { workspace = true }
lpp = { workspace = true, optional = true, features = ["stub"] }
oracle = { workspace = true, optional = true, features = ["stub_alarms", "stub_price"] }
oracle-platform = { workspace = true, optional = true }
platform = { workspace = true, optional = true }
sdk = { workspace = true }
swap = { workspace = true, optional = true }
versioning = { workspace = true, optional = true, features = ["protocol_contract"] }

# Required as a dependency by `entry_point` attribute macro
cosmwasm-std = { workspace = true, optional = true }

enum_dispatch = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
