lints = { workspace = true }

[package]
name = "lease"
version = "0.13.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[package.metadata.cargo-each]
combinations = [
    { tags = ["build", "$dex"], always-on = ["contract", "$dex"], include-rest = false, generics = { "$dex" = ["dex-astroport_main", "dex-astroport_test", "dex-osmosis"] } },
    { tags = ["ci", "@agnostic"], feature-groups = ["skel"], include-rest = false },
    { tags = ["ci", "@agnostic"], always-on = ["dex-test_impl"], feature-groups = ["contract"], include-rest = false },
]
feature-groups = { contract = { members = ["contract", "contract_testing", "internal.test.contract"], at-least-one = true, mutually-exclusive = true }, skel = { members = ["skel", "skel_testing", "internal.test.skel"], at-least-one = false, mutually-exclusive = true } }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Swaps now execute remotely on the remote-lease controller (#647), so the lease
# no longer pulls the DEX-specific `swap` client and these per-DEX selectors are
# no-ops. The lease still carries the DEX `ConnectionParams` at runtime to address
# the ICS-20 transfer channel it funds the lease over, so it is not fully
# DEX-agnostic. The selectors are kept so the per-DEX build matrix and the
# downstream `lease/dex-*` forwarding (tests, etc.) still resolve; the whole axis
# can be dropped when the per-DEX lease build is retired.
dex-astroport_main = []
dex-astroport_test = []
dex-osmosis = []
dex-test_impl = []

contract = [
    "cosmwasm-std/exports",
    "skel",
    "dep:cosmwasm-std",
    "dep:enum_dispatch",
    "dep:lpp",
    "dep:oracle",
    "dep:platform",
    "dep:profit",
    "dep:reserve",
    "dep:thiserror",
    "dep:timealarms",
    "dep:versioning",
    "remote_lease/stub",
]
contract_testing = [
    "contract",
    "skel_testing",
    "lpp/testing",
    "platform/testing",
    "profit/stub_testing",
]
"internal.test.contract" = [
    "contract_testing",
    "currencies/testing",
    "oracle-platform/testing",
    "reserve/testing",
    "timealarms/testing",
]
skel = [
    "dep:thiserror",
]
skel_testing = [
    "skel",
    "dex/testing",
    "finance/testing",
]
"internal.test.skel" = [
    "skel_testing",
    "dep:platform",
    "platform/testing",
    "dep:versioning",
]

[dependencies]
cw-time = { workspace = true }
profit = { workspace = true, optional = true, features = ["stub"] }
reserve = { workspace = true, optional = true, features = ["stub"] }
timealarms = { workspace = true, optional = true, features = ["stub"] }

access-control = { workspace = true }
currencies = { workspace = true }
currency = { workspace = true }
dex = { workspace = true, features = ["impl"] }
finance = { workspace = true }
lpp = { workspace = true, optional = true, features = ["stub"] }
oracle = { workspace = true, optional = true, features = ["stub_alarms", "stub_price"] }
oracle-platform = { workspace = true }
platform = { workspace = true, optional = true }
remote_lease = { workspace = true }
sdk = { workspace = true }
versioning = { workspace = true, optional = true, features = ["protocol_contract"] }

# Required as a dependency by `entry_point` attribute macro
cosmwasm-std = { workspace = true, optional = true }

enum_dispatch = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
