lints = { workspace = true }

[package]
name = "leaser"
version = "0.9.5"
edition.workspace = true
authors.workspace = true
license.workspace = true

[package.metadata.cargo-each]
combinations = [
    { tags = ["build", "@agnostic"], include-rest = false },
    { tags = ["ci", "@agnostic"], include-rest = true },
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testing = ["currency/testing", "lease/testing"]

[dependencies]
admin_contract = { workspace = true }
lease = { workspace = true, features = ["skel"] }
lpp = { workspace = true, features = ["stub"] }
oracle-platform = { workspace = true }
reserve = { workspace = true, features = ["stub"] }

access-control = { workspace = true }
currencies = { workspace = true }
currency = { workspace = true }
finance = { workspace = true }
platform = { workspace = true }
sdk = { workspace = true, features = ["contract"] }
versioning = { workspace = true, features = ["protocol_contract"] }

# Required as a dependency by `entry_point` attribute macro
cosmwasm-std = { workspace = true }

thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
lease = { workspace = true, features = ["testing"] }
finance = { workspace = true, features = ["testing"] }
currency = { workspace = true, features = ["testing"] }
platform = { workspace = true, features = ["testing"] }
reserve = { workspace = true, features = ["testing"] }
schema = { workspace = true }
versioning = { workspace = true, features = ["testing"] }

json-value = { workspace = true }
