lints = { workspace = true }

[package]
name = "leaser"
version = "0.10.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[package.metadata.cargo-each]
combinations = [
    { tags = ["build", "@agnostic"], include-rest = false },
    { tags = ["ci", "@agnostic"], include-rest = true },
]
feature-groups = { "testing" = { members = ["testing", "internal.test.testing"], at-least-one = false, mutually-exclusive = true } }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testing = [
    "lease/skel_testing",
    "platform/testing",
]
"internal.test.testing" = [
    "testing",
    "currencies/testing",
    "versioning/testing",
]

[dependencies]
admin_contract = { workspace = true }
lease = { workspace = true, features = ["skel"] }
lpp = { workspace = true, features = ["stub"] }
oracle-platform = { workspace = true }
reserve = { workspace = true, features = ["stub"] }

access-control = { workspace = true }
currencies = { workspace = true }
currency = { workspace = true }
finance = { workspace = true }
platform = { workspace = true }
sdk = { workspace = true, features = ["contract"] }
versioning = { workspace = true, features = ["protocol_contract"] }

# Required as a dependency by `entry_point` attribute macro
cosmwasm-std = { workspace = true }

thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
json-value = { workspace = true }