lints = { workspace = true }

[package]
name = "lpp"
version = "0.5.6"
edition.workspace = true
authors.workspace = true
license.workspace = true

[package.metadata.cargo-each]
combinations = [
    { tags = ["build", "$net", "$protocol"], always-on = ["contract", "$net", "$protocol"], include-rest = false, generics = { "$net" = "net", "$protocol" = "protocol" } },
    { tags = ["build", "$net", "$protocol"], always-on = ["$net", "$protocol"], include-rest = false, generics = { "$net" = ["net_dev", "net_test"], "$protocol" = ["osmosis-osmosis-osmo"] } },
    { tags = ["build", "$net", "$protocol"], always-on = ["$net", "$protocol"], include-rest = false, generics = { "$net" = ["net_main"], "$protocol" = ["osmosis-osmosis-all_btc", "osmosis-osmosis-akt", "osmosis-osmosis-all_sol", "neutron-astroport-usdc_noble", "osmosis-osmosis-statom", "osmosis-osmosis-usdc_noble"] } },
    { tags = ["ci", "$net", "$protocol"], feature-groups = ["net", "protocol", "stub-and-contract", "testing"], always-on = ["$net", "$protocol"], include-rest = false, generics = { "$net" = "net", "$protocol" = "protocol" } },
    { tags = ["ci", "$net", "$protocol"], feature-groups = ["stub-and-contract", "testing"], always-on = ["$net", "$protocol"], include-rest = false, generics = { "$net" = ["net_dev", "net_test"], "$protocol" = ["osmosis-osmosis-osmo"] } },
    { tags = ["ci", "$net", "$protocol"], feature-groups = ["stub-and-contract", "testing"], always-on = ["$net", "$protocol"], include-rest = false, generics = { "$net" = ["net_main"], "$protocol" = ["neutron-astroport-usdc_noble", "osmosis-osmosis-akt", "osmosis-osmosis-all_btc", "osmosis-osmosis-all_sol", "osmosis-osmosis-statom", "osmosis-osmosis-usdc_noble"] } },
]
feature-groups = { net = { members = ["net_dev", "net_test", "net_main"], at-least-one = true, mutually-exclusive = true }, stub-and-contract = { members = ["stub", "contract"], at-least-one = false, mutually-exclusive = true }, protocol = { members = ["neutron-astroport-usdc_axelar", "osmosis-osmosis-usdc_axelar"], at-least-one = true, mutually-exclusive = true }, testing = { members = ["testing"], at-least-one = false, mutually-exclusive = false } }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
net_dev = ["contract"]
net_test = ["contract"]
net_main = ["contract"]

neutron-astroport-usdc_axelar = ["contract"]
neutron-astroport-usdc_noble = ["contract"]
osmosis-osmosis-akt = ["contract"]
osmosis-osmosis-all_btc = ["contract"]
osmosis-osmosis-all_sol = ["contract"]
osmosis-osmosis-osmo = ["contract"]
osmosis-osmosis-statom = ["contract"]
osmosis-osmosis-usdc_axelar = ["contract"]
osmosis-osmosis-usdc_noble = ["contract"]

contract = ["stub", "sdk/contract", "dep:cosmwasm-std", "dep:versioning", "dep:currencies", "dep:oracle"]
stub = ["dep:currencies"]
testing = ["currency/testing"]

[dependencies]
access-control = { workspace = true }
currencies = { workspace = true, optional = true }
currency = { workspace = true }
finance = { workspace = true }
lpp-platform = { workspace = true }
oracle = { workspace = true, optional = true, features = ["stub_price"] }
oracle-platform = { workspace = true }
platform = { workspace = true }
sdk = { workspace = true }
versioning = { workspace = true, optional = true }

# Required as a dependency by `entry_point` attribute macro
cosmwasm-std = { workspace = true, optional = true }

thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
access-control = { workspace = true }
currencies = { workspace = true, features = ["testing"] }
finance = { workspace = true, features = ["testing"] }
platform = { workspace = true, features = ["testing"] }
schema = { workspace = true }
