lints = { workspace = true }

[package]
name = "lpp"
version = "0.5.6"
edition.workspace = true
authors.workspace = true
license.workspace = true

[package.metadata.cargo-each]
combinations = [
    { tags = ["build", "@agnostic"], always-on = ["contract"], include-rest = false },
    { tags = ["ci", "@agnostic"], feature-groups = ["stub-and-contract", "testing"], include-rest = false },
]
feature-groups = { stub-and-contract = { members = ["stub", "contract"], at-least-one = false, mutually-exclusive = true }, testing = { members = ["testing"], at-least-one = false, mutually-exclusive = false } }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
contract = [
    "stub",
    "sdk/contract",
    "dep:cosmwasm-std",
    "dep:versioning",
    "dep:oracle",
]
stub = []
testing = ["currency/testing"]

[dependencies]
access-control = { workspace = true }
currencies = { workspace = true }
currency = { workspace = true }
finance = { workspace = true }
lpp-platform = { workspace = true }
oracle = { workspace = true, optional = true, features = ["stub_price"] }
oracle-platform = { workspace = true }
platform = { workspace = true }
sdk = { workspace = true }
versioning = { workspace = true, optional = true }

# Required as a dependency by `entry_point` attribute macro
cosmwasm-std = { workspace = true, optional = true }

thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
access-control = { workspace = true }
currencies = { workspace = true, features = ["testing"] }
finance = { workspace = true, features = ["testing"] }
platform = { workspace = true, features = ["testing"] }
schema = { workspace = true }
