lints = { workspace = true }

[package]
name = "lpp"
version = "0.7.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[package.metadata.cargo-each]
combinations = [
    { tags = ["build", "@agnostic"], always-on = ["contract"], include-rest = false },
    { tags = ["ci", "@agnostic"], feature-groups = ["stub-and-contract", "testing"], include-rest = false },
]
feature-groups = { stub-and-contract = { members = ["stub", "contract"], at-least-one = false, mutually-exclusive = true }, testing = { members = ["testing"], at-least-one = false, mutually-exclusive = false } }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
contract = [
    "stub",
    "sdk/contract",
    "dep:access-control",
    "dep:cosmwasm-std",
    "dep:oracle",
    "dep:oracle-platform",
]
stub = []
testing = ["currency/testing"]

[dependencies]
access-control = { workspace = true, optional = true }
currencies = { workspace = true }
currency = { workspace = true }
finance = { workspace = true }
lpp-platform = { workspace = true }
oracle = { workspace = true, optional = true, features = ["stub_price"] }
oracle-platform = { workspace = true, optional = true}
platform = { workspace = true }
sdk = { workspace = true }
versioning = { workspace = true, features = ["protocol_contract"] }

# Required as a dependency by `entry_point` attribute macro
cosmwasm-std = { workspace = true, optional = true }

thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
currencies = { workspace = true, features = ["testing"] }
finance = { workspace = true, features = ["testing"] }
platform = { workspace = true, features = ["testing"] }
