lints = { workspace = true }

[package]
name = "oracle"
version = "0.5.23"
edition.workspace = true
authors.workspace = true
license.workspace = true

[package.metadata.cargo-each]
combinations = [
    { tags = ["build", "@agnostic"], always-on = ["contract"], include-rest = false },
    { tags = ["ci", "@agnostic"], feature-groups = ["$[contract-and-testing]-or-stubs"], include-rest = false, generics = { "$[contract-and-testing]-or-stubs" = ["contract-and-testing", "stubs"] } },
]
feature-groups = { contract-and-testing = { members = ["contract", "testing"], at-least-one = true, mutually-exclusive = false }, stubs ={ members = ["stub_alarms", "stub_price", "stub_swap"], at-least-one = false, mutually-exclusive = false} }



[lib]
crate-type = ["cdylib", "rlib"]

[features]
contract = [
    "stub_alarms",
    "stub_price",
    "stub_swap",
    "sdk/contract",
    "dep:cosmwasm-std",
    "dep:marketprice",
    "dep:versioning",
]
stub_alarms = [
    "dep:currencies",
    "dep:currency",
    "dep:finance",
    "dep:oracle-platform",
    "dep:platform",
    "dep:sdk",
    "dep:serde",
    "dep:thiserror",
]
stub_price = [
    "dep:currency",
    "dep:finance",
    "dep:oracle-platform",
    "dep:sdk",
]
stub_swap = [
    "dep:currencies",
    "dep:currency",
    "dep:oracle-platform",
    "dep:sdk",
    "dep:serde",
    "dep:thiserror",
    "dep:tree",
]
testing = [
    "stub_alarms",
    "stub_price",
    "stub_swap",
]

[dependencies]
currencies = { workspace = true, optional = true }
currency = { workspace = true,  optional = true }
finance = { workspace = true, optional = true }
marketprice = { workspace = true, optional = true }
oracle-platform = { workspace = true, optional = true }
platform = { workspace = true, optional = true }
sdk = { workspace = true, optional = true }
tree = { workspace = true, optional = true }
versioning = { workspace = true, optional = true, features = ["protocol_contract"] }

# Required as a dependency by `entry_point` attribute macro
cosmwasm-std = { workspace = true, optional = true }

thiserror = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = ["derive"] }

[dev-dependencies]
currencies = { workspace = true, features = ["testing"] }
currency = { workspace = true, features = ["testing"] }
finance = { workspace = true }
marketprice = { workspace = true, features = ["testing"] }
oracle = { workspace = true, features = ["testing"] }
platform = { workspace = true, features = ["testing"] }
tree = { workspace = true, features = ["testing"] }
